@@ -1,3 +1,7 @@
+Thu Dec 23 15:40:36 CET 2010
+	Increasing nonce length to 128 to support digest authentication
+	with Opera (see #1633).
+
 Mon Dec 20 21:22:57 CET 2010
 	Added macro MHD_LONG_LONG to allow change of MHD's "long long" use
 	to some other type on platforms that do not support "long long"
